force-app/main/default/objects/BracketsSettingsPersonal__c/BracketsSettingsPersonal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <!-- <customSettingsVisibility>Public</customSettingsVisibility> -->
    <label>Brackets Personal Settings</label>
</CustomObject>