force-app/main/default/objects/BracketsSettingsPersonal__c/fields/Hide_Dialog_Predictions__c.field-meta.xml
<CustomField>
    <fullName>Hide_Dialog_Predictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Dialog Predictions</label>
    <type>Checkbox</type>
</CustomField>