force-app/main/default/objects/BracketsSettingsPersonal__c/fields/Initial_Setup_Step_2_Complete__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_Step_2_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Setup Step 2 Complete</label>
    <type>Checkbox</type>
</CustomField>